<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButtons"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/RadioButtonSagyoumeiTouroku" />



        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"

            android:text="@string/RadioButtonSagyouTouroku" ><requestFocus />
        </RadioButton>
    </RadioGroup>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:inputType="textMultiLine" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/LLAddData"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextViewBefore"
            android:text="" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FFFF8800"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/TextViewSagyoumei" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#FF0088FF"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/TextViewSagyousuu" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/ButtonIchiKasan" />
            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="number" />


        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#FFCCCCCC"
            >
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextViewKaishiZikoku"
                />
            <Spinner
                android:id="@+id/spinnerZi"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextViewZi"
                />
            <Spinner
            android:id="@+id/spinnerHun"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/TextViewHun"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text=" "
            />
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonHenkou" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            />
        <Button
            android:id="@+id/buttonSakujo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="変更前の内容を削除" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            />
        <Button
            android:id="@+id/ButtonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="変更せず戻る" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLTeisyutsu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/editTextMailAddress"
            android:inputType="textEmailAddress"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="1dp"
            android:text=" "
            />
        <Button
            android:id="@+id/buttonTeisyutsu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/NippouTeisyutu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="1dp"
            android:text=" "
            />





        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:background="#FFFF8888"
            >

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/TableLayout"
                    >


                </TableLayout>


        </ScrollView>
        <LinearLayout
            android:background="#FF00FFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="　備考　："
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/editTextBikou"

            /></LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="1dp"
            android:text=" "
            />
        <Button
            android:id="@+id/buttonShinki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/ButtonSagyouKaishi"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="1dp"
            android:text=" "
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:background="#FFFF8800"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/TextViewSagyoumei" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="1dp"
            android:text=" "
            />


    </LinearLayout>


</RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>